tdf#154708 Preserve selection for repeating Shift-arrow on Japanese keyboard

Skip the posting of SalEvent::ExtTextInput and SalEvent::EndExtTextInput
events for private use area characters.

Change-Id: I6fa5dedacefc5d9dd671f607786deb999f5e4c6a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150248
Tested-by: Jenkins
Reviewed-by: Patrick Luby <plubius@neooffice.org>
(cherry picked from commit 1b06f35de68a555b85bceb5fc29d1a5f426f4bb7)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150203
Reviewed-by: Stéphane Guillou <stephane.guillou@libreoffice.org>